welcome.lessons.welcome.bat.bool1.LoneTeen.scala.error
loneTeen:8: error: type mismatch;
 found   : Unit
 required: Boolean
	if(ado(a)==true | ado(b)==true)
        ^