welcome.lessons.welcome.bat.bool1.LoneTeen.scala.code
def ado(n:Int):Boolean = {
	if(n<=19 && n>=13)
		return true
	else
		return false
}
def loneTeen(a:Int, b:Int):Boolean = {
	if(ado(a)==true | ado(b)==true)
	{
		if(ado(a) && ado(b))
			return false
		else
			return true
	}
}
